force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__CustomerTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerTotal__c</fullName>
        <description>Total for this group&#39;s line items before any partner discounts are applied.</description>
        <inlineHelpText>Total for this group&#39;s line items before any partner discounts are applied.</inlineHelpText>
        <label>Customer Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>