force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__ListTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ListTotal__c</fullName>
        <description>Total for this group&#39;s line items before any discounts are applied.</description>
        <inlineHelpText>Total for this group&#39;s line items before any discounts are applied.</inlineHelpText>
        <label>List Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>